@@ -1,3 +1,8 @@
+Wed Jun  2 13:50:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/UserdataCopyCount/Component/UCC_Test_Component_exec.cpp:
+          Built in check for maximum reference count;
+
 Wed Jun  2 13:27:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
